# ChangeLog for dev-perl/Mail-IMAPClient
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-IMAPClient/ChangeLog,v 1.21 2008/07/22 09:08:28 tove Exp $

*Mail-IMAPClient-3.08 (22 Jul 2008)

  22 Jul 2008; Torsten Veller <tove@gentoo.org>
  +Mail-IMAPClient-3.08.ebuild:
  Version bump

  19 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  Mail-IMAPClient-3.06.ebuild:
  Revert to ~arch since it breaks impasync, bug #232277

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  Mail-IMAPClient-3.06.ebuild:
  alpha/ia64/sparc/x86 stable

*Mail-IMAPClient-3.06 (24 Apr 2008)

  24 Apr 2008; Yuval Yaari <yuval@gentoo.org> +Mail-IMAPClient-3.06.ebuild:
  Version bump

  11 Oct 2007; Markus Rothe <corsair@gentoo.org>
  Mail-IMAPClient-2.2.9.ebuild:
  Added ~ppc64; bug #190828

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Mail-IMAPClient-2.2.9.ebuild:
  Ebuild maintenance

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  Mail-IMAPClient-2.2.9.ebuild:
  Stable on Alpha.

  18 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Mail-IMAPClient-2.2.9.ebuild:
  ppc stable

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Mail-IMAPClient-2.2.9.ebuild:
  Adding perl dep; fixed DEPEND

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  Mail-IMAPClient-2.2.9.ebuild:
  Mark 2.2.9 stable on ia64

  04 Jul 2006; Christian Hartmann <ian@gentoo.org>
  Mail-IMAPClient-2.2.9.ebuild:
  Fixed RDEPEND wrt bug #134781

  20 May 2006; Thomas Cort <tcort@gentoo.org> Mail-IMAPClient-2.2.9.ebuild:
  Stable on amd64.

  10 May 2006; Thomas Cort <tcort@gentoo.org> Mail-IMAPClient-2.2.9.ebuild:
  Added ~alpha keyword wrt Bug #129854.

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  Mail-IMAPClient-2.2.9.ebuild:
  Mark 2.2.9 ~ia64

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org>
  Mail-IMAPClient-2.2.9.ebuild:
  Virtuals for perl-core

  30 Dec 2005; <mcumming@gentoo.org> Mail-IMAPClient-2.2.9.ebuild: