@@ -5,15 +5,17 @@ AUX 2.2.9-skiptest.patch 492 RMD160 df4961e16cc3029e7cf528faa2a23d96ad8c44af SHA
 DIST Mail-IMAPClient-2.2.9.tar.gz 376791 RMD160 3980d5227dc0342f5ba7cfd4dfbfce5fb8c10b7c SHA1 00d23579dfce7999c3c53e27a8cc186430d28609 SHA256 fa67a4407295e50a9975769afb9b13ae14db58225d552cbb10c034636c2560c9
 DIST Mail-IMAPClient-3.06.tar.gz 167441 RMD160 275089ae8e8edde34313ccd0a46c27244a1695ba SHA1 5fd28c57fd489c8e7b3a60f6c9f137b8f8214d06 SHA256 a07d496251e8ed20104f24b88737cc1590d8dc9b8046d045942a3d9b4b48878e
 DIST Mail-IMAPClient-3.08.tar.gz 167505 RMD160 0cbc68e1198c679172d502da9d3a5167faabc22c SHA1 2e6905583b7698fa1c78a4681a93f5ae0230066f SHA256 52fa12b594b8f94d6505ffe1ad6955c5c1e5ca4d59b9c139492b44367f97c5c0
+DIST Mail-IMAPClient-3.09.tar.gz 168420 RMD160 85422b10766d87c4ddbe32d401064ea38df6d95d SHA1 6b7660e560fa2ec8003439c5fba8fea85499b7cd SHA256 d2adab2f9e03ffe1c5d9c9c7a56140538c41a235ea94ff6673121b7cf5313d64
 EBUILD Mail-IMAPClient-2.2.9.ebuild 836 RMD160 4dc58ca0e6f602a14c32cc8fb694bb2502d6bac0 SHA1 4b4409b19f68f5936426cb0660ecd7e701b203ee SHA256 46b235acc61d705daaffc4769ee14cf89a5e3a2e5797f883e3cb17982b9c4a48
 EBUILD Mail-IMAPClient-3.06.ebuild 626 RMD160 b9a65e03da4d30d0650c5bdd380ff16c5e213259 SHA1 2795e951ece44223ba1b268808148ce2f57f560f SHA256 fcc59287be065e241f17f777b6c8feffc33437d7c1c583b332160fc963cf1ad2
 EBUILD Mail-IMAPClient-3.08.ebuild 659 RMD160 3b7f0fe5be071e0faba6f090ba87cb1d1c489c5c SHA1 45ce4935fbbf339175a77be395458191c507203f SHA256 f19af27e6cb007516874292a4267202ce102ff7a75b70dd1820857780ff29f7b
-MISC ChangeLog 2679 RMD160 6ed29bbec652c2841513085adf00c5693099029d SHA1 667c578373febe3cebc56bfe286a1d319ca0ee8e SHA256 0b49ead13b704d8e4946a18654b44b513d0ec893fbc0d4901d5e63d7450fe9b5
+EBUILD Mail-IMAPClient-3.09.ebuild 615 RMD160 bced47ac0426265129c5a58a67b978791e8c2a02 SHA1 696ff3eba0b740dfabbf81dadcadb7e5c834472f SHA256 68ca65173c835ec480896b86a0b7c126a4166d1f85d835e3920ff030bc1b535d
+MISC ChangeLog 2908 RMD160 4a9b90238b05d697a820d170452a5a526125df5a SHA1 332a60551c1facb9e5dcb93a2fc2542ef20b5580 SHA256 2ad81069901ca9be2fd597476bbd331da203a8aefd56f763887a703a9bb4c91e
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkiFpiAACgkQV3J2n04Eauxy/wCgxqffShQM3RlKFcq+Ek/JHgBI
-y/MAoNfK3+z52QUPTQq7zsF58On0c+2J
-=hJgv
+iEYEARECAAYFAkiwbvwACgkQV3J2n04Eauz6FQCfdCdqxx3GwMzA9HqcNZai3kWM
+4mIAnR5EOIYG8YR++M7nXTfTUikACqYW
+=RQEJ
 -----END PGP SIGNATURE-----
