@@ -1,6 +1,16 @@
 # ChangeLog for dev-perl/Mail-IMAPClient
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-IMAPClient/ChangeLog,v 1.21 2008/07/22 09:08:28 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-IMAPClient/ChangeLog,v 1.22 2008/08/23 20:11:54 tove Exp $
+
+  23 Aug 2008; Torsten Veller <tove@gentoo.org>
+  +Mail-IMAPClient-3.09.ebuild:
+  Version bump
+
+*Mail-IMAPClient-3.09 (23 Aug 2008)
+
+  23 Aug 2008; Torsten Veller <tove@gentoo.org>
+  +Mail-IMAPClient-3.09.ebuild:
+  Version bump
 
 *Mail-IMAPClient-3.08 (22 Jul 2008)
 
